Bug 463889 - krita-5.1.5 fails compile with libheif-1.14.1
Summary: krita-5.1.5 fails compile with libheif-1.14.1
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: * Unknown (other bugs)
Version First Reported In: 5.1.5
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-01-05 17:55 UTC by Taurnil
Modified: 2023-01-12 10:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Taurnil 2023-01-05 17:55:34 UTC
SUMMARY
***
Compiles fine with libheif-1.14.0 but not 1.14.1

***


STEPS TO REPRODUCE
1. install libheif-1.14.1
2. compile krita
3. fail

OBSERVED RESULT

throws this error;

[ 78%] Built target kritagifimport_autogen
[ 78%] Built target kritagifimport
[ 78%] Automatic MOC for target kritaheifimport
[ 78%] Built target kritaheifimport_autogen
Consolidate compiler generated dependencies of target kritaheifimport
[ 78%] Building CXX object plugins/impex/heif/CMakeFiles/kritaheifimport.dir/HeifImport.cpp.o
[ 78%] Building CXX object plugins/impex/heif/CMakeFiles/kritaheifimport.dir/HeifError.cpp.o
[ 78%] Linking CXX shared module kritaheifimport.so
[ 78%] Built target kritaheifimport
[ 78%] Automatic MOC for target kritaheifexport
[ 78%] Built target kritaheifexport_autogen
Consolidate compiler generated dependencies of target kritaheifexport
[ 78%] Building CXX object plugins/impex/heif/CMakeFiles/kritaheifexport.dir/HeifExport.cpp.o
/usr/src/krita-5.1.5/plugins/impex/heif/HeifExport.cpp: In member function 'virtual KisImportExportErrorCode HeifExport::convert(KisDocument*, QIODevice*, KisPropertiesConfigurationSP)'
/usr/src/krita-5.1.5/plugins/impex/heif/HeifExport.cpp:477:32: error: 'class heif::ColorProfile_nclx' has no member named 'set_color_primaties'; did you mean 'set_color_primaries'?
  477 |                nclxDescription.set_color_primaties(heif_color_primaries_ITU_R_BT_2020_2_and_2100_0);
      |                                ^~~~~~~~~~~~~~~~~~~
      |                                set_color_primaries
/usr/src/krita-5.1.5/plugins/impex/heif/HeifExport.cpp:487:32: error: 'class heif::ColorProfile_nclx' has no member named 'set_color_primaties'; did you mean 'set_color_primaries'?
  487 |                nclxDescription.set_color_primaties(heif_color_primaries(primaries));
      |                                ^~~~~~~~~~~~~~~~~~~
      |                                set_color_primaries
make[2]: *** [plugins/impex/heif/CMakeFiles/kritaheifexport.dir/build.make:113: plugins/impex/heif/CMakeFiles/kritaheifexport.dir/HeifExport.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:37975: plugins/impex/heif/CMakeFiles/kritaheifexport.dir/all] Error 2
make: *** [Makefile:146: all] Error 2


EXPECTED RESULT
successful compile

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Halla Rempt 2023-01-05 18:00:20 UTC
I rather think that this should be reported upstream: breaking source compatibility in a _minor_ release is pretty bad practice!
Comment 2 Halla Rempt 2023-01-05 18:01:16 UTC
oh, wait.. was it a spello in their api? then they still should have kept both versions?
Comment 3 Taurnil 2023-01-05 18:16:13 UTC
I think your right. Submitted an issue with the libheif folks.
Comment 4 Halla Rempt 2023-01-05 18:18:53 UTC
Thanks! See also https://github.com/strukturag/libheif/pull/722
Comment 5 Invent Merge Service 2023-01-06 09:06:34 UTC
Git commit e9184281a17fb73b28cb6bdd41e695eaf38256a2 by Merge Service, on behalf of q234 rty.
Committed on 06/01/2023 at 09:05.
Pushed by merge-service into branch 'master'.

Fix build with libheif 1.14.1
Part-of: <https://invent.kde.org/graphics/krita/-/merge_requests/1699>

M  +8    -0    plugins/impex/heif/HeifExport.cpp

https://invent.kde.org/graphics/krita/commit/e9184281a17fb73b28cb6bdd41e695eaf38256a2
Comment 6 Halla Rempt 2023-01-12 10:32:51 UTC
Git commit 2cf3647ff7c8678b5bd064368ba4ccff3841b754 by Halla Rempt, on behalf of q234 rty.
Committed on 12/01/2023 at 10:32.
Pushed by rempt into branch 'krita/5.1'.

Fix build with libheif 1.14.1
Part-of: <https://invent.kde.org/graphics/krita/-/merge_requests/1699>
(cherry picked from commit e9184281a17fb73b28cb6bdd41e695eaf38256a2)

M  +8    -0    plugins/impex/heif/HeifExport.cpp

https://invent.kde.org/graphics/krita/commit/2cf3647ff7c8678b5bd064368ba4ccff3841b754