Fix build with libheif 1.14.1

BUG: 463889
Part-of: <https://invent.kde.org/graphics/krita/-/merge_requests/1699>